# cheap-8

./: .gitignore  CMakeLists.txt  README.md
src/: cheap_8.c  cheap_8.h  cpu.c  cpu.h  display.c  display.h  instructions.c  instructions.h  main.c  rom.c  rom.h
